// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Text Component correctly 1`] = `
<h1
  className="sc-gzVnrw gKbRpi"
>
  Das ist ein Text
</h1>
`;

exports[`renders the Text Component correctly 2`] = `
<h2
  className="sc-htoDjs gOQHsU"
>
  Das ist ein Text
</h2>
`;

exports[`renders the Text Component correctly 3`] = `
<h3
  className="sc-dnqmqq jnxAvz"
>
  Das ist ein Text
</h3>
`;

exports[`renders the Text Component correctly 4`] = `
<h4
  className="sc-iwsKbI zQYRe"
>
  Das ist ein Text
</h4>
`;

exports[`renders the Text Component correctly 5`] = `
<h5
  className="sc-gZMcBi cPRefB"
>
  Das ist ein Text
</h5>
`;

exports[`renders the Text Component correctly 6`] = `
<h6
  className="sc-gqjmRU GSbbv"
>
  Das ist ein Text
</h6>
`;

exports[`renders the Text Component correctly 7`] = `
<p
  className="sc-VigVT lgiVca"
>
  Das ist ein Text
</p>
`;

exports[`renders the Text Component correctly 8`] = `
<a
  className="sc-jTzLTM gmJiki"
>
  Das ist ein Text
</a>
`;

exports[`renders the Text Component correctly 9`] = `
<span
  className="sc-jzJRlG kazHNP"
>
  Das ist ein Text
</span>
`;

exports[`renders the Text Component correctly 10`] = `
<label
  className="sc-fjdhpX eKDuiA"
>
  Das ist ein Text
</label>
`;

exports[`renders the Text Component correctly 11`] = `
<span
  className="sc-jzJRlG gsabou"
  color="error"
  scale="xl"
>
  Das ist ein Text
</span>
`;
